Bug 1614225.  Fix validity checks in createPattern to follow the spec. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D63409